--- a/index.html
+++ b/index.html
@@ -9,11 +9,29 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Попробуй выбраться.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Попробуй выбраться" startnode="1" creator="Twine" creator-version="2.3.14" ifid="193CADF5-11D4-43AA-8721-F33880E7D6BB" zoom="1" format="Harlowe" format-version="3.2.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Начало" tags="" position="669,185.5" size="100,100">Как отсюда вообще выбраться?
-[[На автобусе]]
-[[Воздушный транспорт]]
-[[Попросить помощи у местных жителей]]
-[[Водный транспорт]]</tw-passagedata><tw-passagedata pid="2" name="На автобусе" tags="" position="444,335.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="3" name="Воздушный транспорт" tags="" position="594,300.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="4" name="Попросить помощи у местных жителей" tags="" position="744,335.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="Водный транспорт" tags="" position="894,335.5" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+<tw-storydata name="Попробуй выбраться" startnode="1" creator="Twine" creator-version="2.3.14" ifid="193CADF5-11D4-43AA-8721-F33880E7D6BB" zoom="1" format="Harlowe" format-version="3.2.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-link {
+	color: #FF0045;
+  	font-weight: normal
+}
+
+tw-story {
+  font-family: Arial;
+  font-size: 22px;
+  color: black
+}
+
+tw-story {
+  background-color: white;
+}
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="0" tags="" position="700,132.5" size="100,100">Как отсюда вообще выбраться?
+[[&gt; На автобусе|1]]
+[[&gt; Воздушный транспорт|2]]
+[[&gt; Попросить помощи у местных жителей|3]]
+[[&gt; Водный транспорт|4]]</tw-passagedata><tw-passagedata pid="2" name="1" tags="" position="419,276.5" size="100,100">Междугородних автобусных остановок в N нет. Ближайшая находится в селе Полновате.
+[[&gt; Построить маршрут до Полноваты|5]]</tw-passagedata><tw-passagedata pid="3" name="2" tags="" position="585,309.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="4" name="3" tags="" position="728,311.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="4" tags="" position="854,303.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="5" tags="" position="414,420.5" size="100,100">По прямой до Полновата 49 километров. Построенный маршрут составит 367 километров. Время в пути — 7 часов 45 минут
+&lt;img src=&quot;https://twinery.org/homepage/img/logo.svg&quot; width=&quot;256&quot; height=&quot;256&quot;&gt;
+Во многие районы Ханты-Мансийского автономного округа (ХМАО) можно попасть только по зимникам: в холодное время года они единственная возможность добраться в районного или окружного центров.
+[[&gt; Попробовать другой вид транспорта|0]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
